# cognitive-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
artifacts/reports/: numeric_training_report.json  paper_manifest.json  text_memory_demo.json  v2_demo_report.json  v2_paper_manifest.json
cognitive_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cognitive_engine/config/: __init__.py  loader.py
cognitive_engine/consolidation/: engine_v2.py
cognitive_engine/core/: registry.py
cognitive_engine/interfaces/: __init__.py
cognitive_engine/memory/: graph_memory.py  hybrid_memory.py  project_memory.py
cognitive_engine/models/: __init__.py
cognitive_engine/modules/: importance_evaluator.py  semantic_understanding.py
cognitive_engine/nlp/: models.py  trainer.py
cognitive_engine/replay/: buffer.py
cognitive_engine/routing/: __init__.py  learned_router.py
cognitive_engine/specialists/: __init__.py  runtime.py
cognitive_engine/stability/: governor.py
cognitive_engine/training/: __init__.py  online_trainer.py
cognitive_engine/utils/: __init__.py  text.py  visualization.py
configs/: default.yaml
docs/: cognitive_architecture_v2_proposal.md  cognitive_engine_v2_implementation_paper.md  hybrid_cognitive_architecture_paper.md
scripts/: generate_paper.py  generate_paper_v2.py  run_full_project.py  run_text_memory_demo.py  run_v2_demo.py  train_numeric_demo.py  train_translation_demo.py
tests/: test_engine_smoke.py  test_engine_v2.py  test_learned_router_v2.py  test_numeric_training.py
