[project]
name = "cognitive-engine"
version = "0.2.0"
description = "Librería NLP basada en Arquitectura Cognitiva V2 (Aprendizaje Continuo y Memoria)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Gerson", email = "author@example.com" }
]
dependencies = [
    "matplotlib>=3.10",
    "networkx>=3.6",
    "numpy>=2.4",
    "python-docx>=1.2",
    "pyyaml>=6.0",
    "pytest>=9.0",
    "torch>=2.12",
    "tqdm>=4.67",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cognitive_engine*"]

