[project]
name = "cognitive-engine"
version = "0.2.1"
description = "Librería NLP basada en Arquitectura Cognitiva V2 (Aprendizaje Continuo y Memoria)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "bueormnew", email = "dalusx64@gmail.com" }
]
dependencies = [
    "matplotlib>=3.5",
    "networkx>=2.8",
    "numpy>=1.22",
    "python-docx>=0.8",
    "pyyaml>=5.4",
    "pytest>=7.0",
    "torch>=2.0",
    "tqdm>=4.60",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cognitive_engine*"]

